# edge-vision-detector

./: CMakeLists.txt  README.md  config.yaml
include/: Detection.h  Detector.h  Stream.h
src/: Detector.cpp  Stream.cpp  main.cpp
